--- a/dotnet-pg-nats-bridge.csproj
+++ b/dotnet-pg-nats-bridge.csproj
@@ -97,6 +97,9 @@
   <ItemGroup>
     <Compile Include="DotNetPgnatsBridge.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSHARP.Targets" />
   <ProjectExtensions>
     <VisualStudio AllowExistingFolder="true" />
